--- a/jxf/src/main/webapp/WEB-INF/web.xml
+++ b/jxf/src/main/webapp/WEB-INF/web.xml
@@ -57,7 +57,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>  
+    <!-- <filter>  
         <filter-name>jcaptchaFilter</filter-name>  
         <filter-class>com.jxf.oa.util.jcaptcha.JCaptchaFilter</filter-class>  
         <init-param>  
@@ -74,7 +74,7 @@
     <filter-mapping>  
         <filter-name>jcaptchaFilter</filter-name>  
         <url-pattern>/jcaptcha</url-pattern>  
-    </filter-mapping>  
+    </filter-mapping>  --> 
  
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
